--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "posttest": "npm run lint && nsp check"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "compression": "^1.0.3",
     "cors": "^2.5.2",
     "helmet": "^1.3.0",
@@ -22,6 +23,7 @@
     "loopback-connector-mssql": "^3.2.0",
     "loopback-connector-oracle": "^3.2.0",
     "oracledb": "^2.1.2",
+    "prompt": "^1.0.0",
     "serve-favicon": "^2.0.1",
     "strong-error-handler": "^2.0.0"
   },
